[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nasapower-s3"
version = "1.0.0"
description = "A universal, secure, and fast interface for NASA POWER S3 data."
readme = "README.md"
authors = [
  { name = "Varenya Sri Mudumba", email = "srivarenya.mudumba@gmail.com"},
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = ["nasa", "power", "s3", "zarr", "meteorology", "solar", "climate"]
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "xarray",
    "zarr",
    "s3fs",
    "fsspec",
]

[project.urls]
"Homepage" = "https://github.com/srivarenya01/nasapower-s3"
"Bug Tracker" = "https://github.com/srivarenya01/nasapower-s3/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "codespell",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.codespell]
skip = "*.lock,*.zarr,.git,__pycache__"
ignore-words-list = "fsspec"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require network access to S3 (deselect with '-m not integration')",
]
testpaths = ["tests"]
